--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -22,14 +22,7 @@ body {
   background-attachment: fixed;
   {% endif %}
   overflow-wrap: break-word;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
-body > main {
-  flex: 1;
-}
-
 p {
   line-height: 1.5;
   margin: 1.875rem 0;
@@ -189,6 +182,8 @@ img {
 }
 
 .navbar-custom .navbar-nav .nav-link {
+  padding-top: 0;
+  padding-bottom: 0;
   line-height: 1.25rem;
   padding-top: 0.9375rem;
   padding-bottom: 0.9375rem;
@@ -253,28 +248,22 @@ img {
 }
 
 .navbar-custom .nav-item.dropdown .dropdown-menu {
+  min-width: 0;
   margin-top: 0;
   font-size: 1em;
   border: 0;
   padding: 0;
-  {% if site.navbar-var-length %}
-  min-width: 100%;
-  {% else %}
-  min-width: 0;
   width: 100%;
   word-break: break-word;
-  {% endif %}
 }
-
 .navbar-custom .nav-item.dropdown .dropdown-menu .dropdown-item {
+  white-space: normal;
   padding: 0.625rem;
   background-color: {{ site.navbar-col | default: "#EAEAEA" }};
   text-decoration: none !important;
+  border-width: 0 1px 1px 1px;
   font-weight: normal;
   color: {{ site.navbar-text-col | default: "#404040" }};
-  {% unless site.navbar-var-length %}
-  white-space: normal;
-  {% endunless %}
 }
 
 @media (min-width: 1200px) {
@@ -286,10 +275,6 @@ img {
     padding-left: 0.625rem;
     border: 1px solid {{ site.navbar-border-col | default: "#DDDDDD" }};
     border-width: 0 1px 1px;
-  }
-
-  .navbar-custom .nav-item.dropdown .dropdown-menu .dropdown-item:first-child {
-    border-top-width: 1px;
   }
 }
 
@@ -448,10 +433,6 @@ footer .footer-custom-content {
 
 /* --- Post preview (feed) --- */
 
-.posts-list {
-    margin: 0;
-}
-
 .post-preview {
   padding: 1.25rem 0;
   border-bottom: 1px solid #eee;
@@ -580,10 +561,6 @@ footer .footer-custom-content {
 .blog-tags span {
   color: {{ site.text-col | default: "#404040" }};
   opacity: 0.8;
-}
-
-.blog-tags .list-inline-item {
-  margin-right: 0;
 }
 
 .blog-tags a {
@@ -745,6 +722,39 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   }
 }
 
+.header-section.has-img .no-img {
+  margin-top: 0;
+  background-color: #FCFCFC;
+  margin: 0 0 2.5rem;
+  padding: 1.25rem 0;
+  box-shadow: 0 0 0.3125rem #AAA;
+}
+/* Many phones are 320 or 360px, so make sure images are a proper aspect ratio in those cases */
+.header-section.has-img .intro-header.no-img {
+  display: none;
+}
+@media (max-width: 365px) {
+  .header-section.has-img .intro-header.no-img {
+    display: block;
+  }
+  .intro-header.big-img {
+    width: 100%;
+    height: 13.75rem;
+  }
+  .intro-header.big-img .page-heading,
+  .intro-header.big-img .post-heading {
+    display: none;
+  }
+  .header-section.has-img .big-img {
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 325px) {
+  .intro-header.big-img {
+    height: 12.5rem;
+  }
+}
+
 #header-gh-btns {
   margin-bottom: 0.9375rem;
 }
@@ -786,7 +796,6 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   background-color: #FFF;
   border-radius: 0;
   color: {{ site.text-col | default: "#404040" }};
-  padding: 0.75rem 1rem;
 }
 @media (min-width: 768px) {
   .pagination .page-item .page-link {
@@ -989,7 +998,8 @@ pre {
 
 .center {
   display: block;
-  margin: 0 auto;
+  margin: auto;
+  width: 50%;
 }
 
 /* Search bar */
@@ -1091,4 +1101,31 @@ pre {
   #nav-search-text {
     display: inline-block;
   }
+}
+
+ .sidenote {
+   position: fixed;
+   top: 20%;
+   right: 2rem;
+   max-width: 15rem;
+   transition: 0.2s ease-in transform;
+   transform: translateX(100%) translateX(2rem);
+ }
+
+ .sidenote.display {
+   transform: translateX(0);
+ }
+
+ figcaption {
+   text-align: center;
+   font-size: 0.8em;
+ }
+
+.footnotes > ol > li {
+  font-size: 0.8em;
+}
+
+.footnotes > ol > li > p {
+  font-size: inherit;
+  margin: 0.7em 0;
 }
